--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,9 +1,14 @@
-  node{
+pipeline{
+
     stage('SCM Checkout') {
+    steps{
           git 'https://github.com/team6-6/ShelterApp'   
+          }
     } 
     stage('Build'){
-    sh 'mvn package'
+    steps{
+    echo 'hello'
+    }
       }
  }
    
