--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,4 +1,6 @@
-pipeline{
+pipeline {
+    agent any 
+    stages {
 
     stage('SCM Checkout') {
     steps{
@@ -10,5 +12,6 @@ pipeline{
     echo 'hello'
     }
       }
+ }
  }
    
