--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,7 +4,7 @@ pipeline {
 
     stage('SCM Checkout') {
     steps{
-          git 'https://github.com/team6-6/ShelterApp'   
+         echo 'hello' 
           }
     } 
     stage('Build'){
