--- a/JenkinsFile
+++ b/JenkinsFile
@@ -10,7 +10,7 @@ pipeline {
             
         stage('Build'){
             steps{
-                sh './gradlew build'
+               sh label: '', script: './gradlew build'
                 }
             }
         }
