--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -17,7 +17,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainCivilianActivity"></activity>
+        <activity android:name=".RequestsAdminActivity"></activity>
+        <activity android:name=".RequestsActivity" />
+        <activity android:name=".RateActivity" />
+        <activity android:name=".ContactUsActivity" />
+        <activity android:name=".NumbersActivity" />
+        <activity android:name=".SirensActivity" />
+        <activity android:name=".SheltersActivity" />
+        <activity android:name=".MainCivilianActivity" />
         <activity android:name=".MainEmployeeActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
