--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.shelter4u">
+    package="com.example.example">
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -17,10 +17,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditUserActivity"></activity>
-        <activity android:name=".MainAdminActivity" />
-        <activity android:name=".ChangeActivity" />
-        <activity android:name=".ForgotActivity" />
+        <activity android:name=".RequestsAdminActivity"></activity>
+        <activity android:name=".RequestsActivity" />
+        <activity android:name=".RateActivity" />
+        <activity android:name=".ContactUsActivity" />
+        <activity android:name=".NumbersActivity" />
+        <activity android:name=".SirensActivity" />
+        <activity android:name=".SheltersActivity" />
+        <activity android:name=".MainCivilianActivity" />
+        <activity android:name=".MainEmployeeActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -36,6 +41,10 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
+        <activity android:name=".EditUserActivity" />
+        <activity android:name=".MainAdminActivity" />
+        <activity android:name=".ForgotActivity" />
+        <activity android:name=".ChangeActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
