--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,32 +1,30 @@
 pipeline {
-    agent any 
-    stages {
-
-        stage('SCM Checkout') {
-            steps{
-               git 'https://github.com/team6-6/ShelterApp' 
-                }
-            }
-            
-
-    stage ('Prepare'){
-      steps {
-        sh 'chmod +x ./gradlew'
-      }
+    agent {
+        docker {
+            image 'maven:3-alpine'
+            args '-v /root/.m2:/root/.m2'
+        }
     }
-    
-    
-    stage('Build'){
-            steps{
-               sh './gradlew src'
-                }
+    stages {
+        stage('Build') {
+            steps {
+                sh 'mvn -B -DskipTests clean package'
             }
-            
-      stage('Test'){
-            steps{
-              echo 'test'
+        }
+        stage('Test') {
+            steps {
+                sh 'mvn test'
+            }
+            post {
+                always {
+                    junit 'target/surefire-reports/*.xml'
                 }
             }
         }
- }
-   
+        stage('Deliver') {
+            steps {
+                sh './jenkins/scripts/deliver.sh'
+            }
+        }
+    }
+}
