--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,8 +1,10 @@
 pipeline {
-    agent { 
-        image 'windsekirun/jenkins-android-docker:1.1.1'
+    agent any
+    tools { 
+        maven 'Maven 3.3.9' 
+        jdk 'jdk8' 
     }
-       
+    
     stages {
         stage('Build') {
             steps {
