--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,8 +1,6 @@
 pipeline {
-    agent any
-    tools { 
-        maven 'Maven 3.3.9' 
-        jdk 'jdk8' 
+ agent {
+        docker { image 'node:7-alpine' }
     }
     
     stages {
