--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,6 +1,9 @@
 pipeline {
  agent {
-        docker { image 'node:7-alpine' }
+        docker { 
+           image 'node:7-alpine' 
+           args '-v /root/.m2:/root/.m2'   
+        }
     }
     
     stages {
