--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,9 +1,10 @@
 pipeline {
- agent {
-    docker {
-      image 'windsekirun/jenkins-android-docker:1.1.1'
+    agent {
+        docker {
+            image 'maven:3-alpine'
+            args '-v /root/.m2:/root/.m2'
+        }
     }
-  }
     
     stages {
         stage('Build') {
