--- a/JenkinsFile
+++ b/JenkinsFile
@@ -5,11 +5,25 @@ pipeline {
             args '-v /root/.m2:/root/.m2'
         }
     }
-    
     stages {
         stage('Build') {
             steps {
                 sh 'mvn -B -DskipTests clean package'
+            }
+        }
+        stage('Test') {
+            steps {
+                sh 'mvn test'
+            }
+            post {
+                always {
+                    junit 'target/surefire-reports/*.xml'
+                }
+            }
+        }
+        stage('Deliver') {
+            steps {
+                sh './jenkins/scripts/deliver.sh'
             }
         }
     }
