--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,15 +11,18 @@ pipeline {
                 sh 'mvn -B -DskipTests clean package'
             }
         }
-        stage('Test') {
-            steps {
-                sh 'mvn test'
-            }
-            post {
-                always {
-                    junit 'target/surefire-reports/*.xml'
-                }
-            }
+        
+       stage('UI Testing') {
+             steps {
+                script {                                                          
+                    if (currentBuild.result == null  || currentBuild.result == 'SUCCESS') {  
+                 sh 'emulator @Nexus_Emulator_API_24
+                sh 'appium &'  
+     
+                sh 'rspec spec -fd'
+          }
         }
+      }
     }
+  }
 }
