--- a/JenkinsFile
+++ b/JenkinsFile
@@ -14,7 +14,7 @@ pipeline {
         
          stage('Stage Unit Tests') {
             steps{
-      sh './gradlew androidTest'
+      sh './gradlew testReleaseUnitTest'
                }
         }
     
