--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.example.example</groupId>
-  <artifactId>my-app</artifactId>
+  <artifactId>Example1</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>my-app</name>
+  <name>Example1</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -27,7 +27,7 @@
             <manifest>
               <addClasspath>true</addClasspath>
               <classpathPrefix>lib/</classpathPrefix>
-              <mainClass>com.example.example.App</mainClass>
+              <mainClass>com.example.example</mainClass>
             </manifest>
           </archive>
         </configuration>
