--- a/pom.xml
+++ b/pom.xml
@@ -14,24 +14,15 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-  </dependencies>
-  <build>
-    <plugins>
-      <plugin>
-        <!-- Build an executable JAR -->
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.0.2</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <addClasspath>true</addClasspath>
-              <classpathPrefix>lib/</classpathPrefix>
-              <mainClass>com.example.example.App</mainClass>
-            </manifest>
-          </archive>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+  </dependencies>	<build>
+		<finalName>Spring Examples</finalName>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+			<resource>
+				<directory>app/src/androidTest</directory>
+			</resource>
+		</resources>
+	</build>
 </project>
