--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>	<build>
-		<finalName>Spring Examples</finalName>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-			</resource>
-			<resource>
-				<directory>app/src/main</directory>
-			</resource>
-		</resources>
-	</build>
+    <sourceDirectory>${project.basedir}/src/main/java</sourceDirect
+    <testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>    
+    <resources>
+      <resource>
+        <directory>${project.basedir}/src/main/resources</directory>
+      </resource>
+    </resources>
+    <testResources>
+      <testResource>
+        <directory>${project.basedir}/src/test/resources</directory>
+      </testResource>
+    </testResources>
+    <!--[...]-->
+  </build>
 </project>
