--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-  </dependencies>	<build>
+  </dependencies>
+  <properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+  <build>
     <plugins>
       <plugin>
         <!-- Build an executable JAR -->
