--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,17 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <build>
-    <plugins>
+  <build>	  
+	  <plugins>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.1</version>
+            <configuration>
+                <source>1.7</source>
+                <target>1.7</target>
+            </configuration>
+        </plugin>
       <plugin>
         <!-- Build an executable JAR -->
         <groupId>org.apache.maven.plugins</groupId>
