refering to the pom.xml

--- a/Example1/app/JenkinsFile
+++ b/Example1/app/JenkinsFile
@@ -14,7 +14,7 @@ pipeline {
             }
         stage('Build') {
             steps {
-                sh 'mvn -B -DskipTests clean package'
+                sh 'mvn -B -f Example1/app/pom.xml -DskipTests clean package'
             }
         }
         
