--- a/Example/JenkinsFile
+++ b/Example/JenkinsFile
@@ -10,18 +10,18 @@ pipeline {
   stages {
     stage ('Prepare'){
       steps {
-        sh 'chmod +x ./gradlew'
+        sh 'chmod +x ./Example/gradlew'
       }
     }
     stage('Compile') {
       steps {
-        sh './gradlew compileDebugSources'
+        sh './Example/gradlew compileDebugSources'
       }
     }
     stage('Unit test') {
       steps {
        // Compile and run the unit tests for the app and its dependencies
-        sh './gradlew testDebugUnitTest testDebugUnitTest' 
+        sh './Example/gradlew testDebugUnitTest testDebugUnitTest' 
 
          //Analyse the test results and update the build result as appropriate
         //junit '*/TEST-.xml'
@@ -29,7 +29,7 @@ pipeline {
     }
     stage('Build APK') {
       steps {
-        sh './gradlew assembleDebug'
+        sh './Example/gradlew assembleDebug'
       }
     }
   }
