--- a/Example/JenkinsFile
+++ b/Example/JenkinsFile
@@ -2,6 +2,8 @@ pipeline {
   agent {
     docker {
       image 'windsekirun/jenkins-android-docker:1.1.1'
+      ENTRYPOINT ["/docker-entrypoint.sh"]
+CMD ["postgres"]
     }
   }
   options {
