--- a/Example/JenkinsFile
+++ b/Example/JenkinsFile
@@ -18,7 +18,7 @@ pipeline {
     }
     stage('Compile') {
       steps {
-        sh './Example/gradlew compileDebugSources'
+        sh './Example/gradlew'
       }
     }
     stage('Unit test') {
