--- a/Example/JenkinsFile
+++ b/Example/JenkinsFile
@@ -14,4 +14,9 @@ pipeline {
       }
     }
   }
+  stage('Compile') {
+      steps {
+        sh './Example/gradlew compileDebugSources'
+      }
+    }
 }
