--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -24,7 +24,7 @@ pipeline {
         sh './gradlew testDebugUnitTest testDebugUnitTest' 
 
          //Analyse the test results and update the build result as appropriate
-        //junit '*/TEST-.xml'
+        junit '*/TEST-.xml'
       }
     }
     stage('Build APK') {
