Update jenkins file

--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -10,6 +10,8 @@ pipeline {
   stages {
     stage ('Prepare'){
       steps {
+        sh 'git clone https://github.com/team6-6/ShelterApp.git'
+        sh 'gradle-site-plugin'
         sh 'chmod +x ./gradlew'
       }
     }
