Update Jenkins File

--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -21,7 +21,8 @@ pipeline {
     }
     stage('Unit test') {
       steps {
-        sh ./gradlew connectedAndroidTest
+        sh './gradlew connectedAndroidTest'
+        
        // Compile and run the unit tests for the app and its dependencies
         //sh './gradlew testDebugUnitTest testDebugUnitTest' 
 
