--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -20,8 +20,10 @@ pipeline {
     }
     stage('Unit test') {
       steps {
+        sh './gradlew connectedAndroidTest'
+        
        // Compile and run the unit tests for the app and its dependencies
-        sh './gradlew testDebugUnitTest testDebugUnitTest' 
+        //sh './gradlew testDebugUnitTest testDebugUnitTest' 
 
          //Analyse the test results and update the build result as appropriate
         //junit '*/TEST-.xml'
