--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -43,7 +43,7 @@ pipeline {
     }
     stage('Build APK') {
       steps {
- //       sh './gradlew assembleDebug'
+        sh './gradlew assembleDebug'
       }
     }
   }
