--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -20,17 +20,17 @@ pipeline {
     }
     stage('Unit test') { 
       steps {
-            step([
-        $class: 'AndroidEmulator',
-        osVersion: 'android-23',
-        screenResolution: '1080x1920',
-        screenDensity: 'xxhdpi',
-        deviceLocale: 'en_US',
-        targetAbi: 'x86',
-        sdCardSize: '200M',
-        showWindow: true,
-        commandLineOptions: '-noaudio -gpu mesa -qemu -m 1024 -enable-kvm'
-])
+ //           step([
+  //      $class: 'AndroidEmulator',
+  //      osVersion: 'android-23',
+  //      screenResolution: '1080x1920',
+  //      screenDensity: 'xxhdpi',
+  //      deviceLocale: 'en_US',
+  //      targetAbi: 'x86',
+  //      sdCardSize: '200M',
+ //       showWindow: true,
+//        commandLineOptions: '-noaudio -gpu mesa -qemu -m 1024 -enable-kvm'
+//])
         sh './gradlew connectedAndroidTest'
         
        // Compile and run the unit tests for the app and its dependencies
