--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -20,19 +20,18 @@ pipeline {
     }
     stage('Unit test') { 
       steps {
- //           step([
-  //      $class: 'AndroidEmulator',
-  //      osVersion: 'android-23',
-  //      screenResolution: '1080x1920',
-  //      screenDensity: 'xxhdpi',
-  //      deviceLocale: 'en_US',
-  //      targetAbi: 'x86',
-  //      sdCardSize: '200M',
- //       showWindow: true,
-//        commandLineOptions: '-noaudio -gpu mesa -qemu -m 1024 -enable-kvm'
-//])
         sh './gradlew connectedAndroidTest -i'
-        $ANDROID_SDK/tools/emulator -avd Nexus_5X_API_23 -wipe-data
+        step([
+        $class: 'AndroidEmulator',
+        osVersion: 'android-23',
+        screenResolution: '1080x1920',
+        screenDensity: 'xxhdpi',
+        deviceLocale: 'en_US',
+        targetAbi: 'x86',
+        sdCardSize: '200M',
+        showWindow: true,
+        commandLineOptions: '-noaudio -gpu mesa -qemu -m 1024 -enable-kvm'
+])
        sh './gradlew test'
         
        // Compile and run the unit tests for the app and its dependencies
