--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -20,22 +20,22 @@ pipeline {
     }
     stage('Unit test') { 
       steps {
-        sh './gradlew connectedAndroidTest -i'
-        step([
-        $class: 'AndroidEmulator',
-        osVersion: 'android-23',
-        screenResolution: '1080x1920',
-        screenDensity: 'xxhdpi',
-        deviceLocale: 'en_US',
-        targetAbi: 'x86',
-        sdCardSize: '200M',
-        showWindow: true,
-        commandLineOptions: '-noaudio -gpu mesa -qemu -m 1024 -enable-kvm'
-])
-       sh './gradlew test'
+  //      sh './gradlew connectedAndroidTest -i'
+  //      step([
+  //      $class: 'AndroidEmulator',
+  //      osVersion: 'android-23',
+  //      screenResolution: '1080x1920',
+  //      screenDensity: 'xxhdpi',
+  //      deviceLocale: 'en_US',
+    //    targetAbi: 'x86',
+    //    sdCardSize: '200M',
+   //     showWindow: true,
+  //      commandLineOptions: '-noaudio -gpu mesa -qemu -m 1024 -enable-kvm'
+//])
+      // sh './gradlew test'
         
        // Compile and run the unit tests for the app and its dependencies
-        //sh './gradlew testDebugUnitTest testDebugUnitTest' 
+        sh './gradlew testDebugUnitTest testDebugUnitTest' 
 
          //Analyse the test results and update the build result as appropriate
         //junit '*/TEST-.xml'
