--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -27,26 +27,19 @@ pipeline {
       steps {
       
       sh "./gradlew testDebugUnitTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
-  //      sh './gradlew connectedAndroidTest -i'
-  //      step([
-  //      $class: 'AndroidEmulator',
-  //      osVersion: 'android-23',
-  //      screenResolution: '1080x1920',
-  //      screenDensity: 'xxhdpi',
-  //      deviceLocale: 'en_US',
-    //    targetAbi: 'x86',
-    //    sdCardSize: '200M',
-   //     showWindow: true,
-  //      commandLineOptions: '-noaudio -gpu mesa -qemu -m 1024 -enable-kvm'
-//])
-      // sh './gradlew test'
-        
-       // Compile and run the unit tests for the app and its dependencies
-     //   sh './gradlew testDebugUnitTest testDebugUnitTest' 
-
-         //Analyse the test results and update the build result as appropriate
-        //junit '*/TEST-.xml'
       }
     }
+    
+    stage('Stage Instrumented Test'){
+    sh "$ADB start-server"
+    def error
+parallel{
+launchEmulator:{
+sh "$ANDROID_HOME/tools/qemu/linux-x86_64/qemu-system-x86_64 -engine classic -prop"
+},
+runAndroidTests:{
+timeout(time: 20, unit: 'SECONDS'){
+sh "$ADB wait-for-device"
+}
   }
 }
