--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -1,66 +1,47 @@
 pipeline{
-  agent
-  {
-	docker 
-	{
-	  image 'windsekirun/jenkins-android-docker:1.1.1'
-	}
-  }
-  options
-  {
-	skipStagesAfterUnstable()
-  }
-  stages 
-	{
-		stage('Prepare')
-		{
-			  steps
-			  {
-					sh 'chmod +x ./gradlew'
-			  }
+  	agent {
+		docker {
+	  		image 'windsekirun/jenkins-android-docker:1.1.1'
 		}
-		stage('Compile')
-		{
-			steps
-			{
+ 	}
+  	options {
+		skipStagesAfterUnstable()
+  	}
+  	stages {
+		stage('Prepare') {
+	  		steps {
+				sh 'chmod +x ./gradlew'
+	  		}
+		}
+		stage('Compile') {
+	  		steps {
 				sh './gradlew compileDebugSources'
-			 }
+	  		}
 		}
-		stage('Build APK')
-		{
-			 steps
-			 {
-					sh "./gradlew assembleDebug assembleAndroidTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
-			 }
+		stage('Build APK') {
+	  		steps {
+				sh "./gradlew assembleDebug assembleAndroidTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
+	  		}
 		}
-		stage('Unit test')
-		{
-			steps
-			{
-
-				  sh "./gradlew testDebugUnitTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
-			}
+		stage('Unit test') {
+	  		steps {
+	  			sh "./gradlew testDebugUnitTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
+	  		}
 		}
 
-		stage('Stage Instrumented Test')
-		{
-				sh "$ADB start-server"
-				def error
-				parallel
-				{
-					launchEmulator:
-					{
-						sh "$ANDROID_HOME/tools/qemu/linux-x86_64/qemu-system-x86_64 -engine classic -prop"
-					},
-					runAndroidTests :
-					{
-						timeout(time: 20, unit : 'SECONDS')
-						{
-						sh "$ADB wait-for-device"
-						}
+		stage('Stage Instrumented Test') {
+			sh "$ADB start-server"
+			def error
+			parallel{
+				launchEmulator: {
+					sh "$ANDROID_HOME/tools/qemu/linux-x86_64/qemu-system-x86_64 -engine classic -prop"
+				}},
+				runAndroidTests : {
+					timeout(time: 20, unit : 'SECONDS') {
+						sh "$ADB wait-for-device"				
 					}
 				}
+			}
 		}
 	}
 }
-
