Update jenkins file

--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -30,8 +30,7 @@ pipeline{
 		}
 
 		stage('Stage Instrumented Test') {
-		steps{
-			sh "$ADB start-server"
+			//sh "$ADB start-server"
 			//def error
 			parallel{
 				launchEmulator: {
@@ -39,6 +38,6 @@ pipeline{
 				}
 
 			}
-		}}
+		}
 	}
 }
