Update Jenkins File

--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -30,13 +30,18 @@ pipeline{
 		}
 
 		stage('Stage Instrumented Test') {
-			//sh "$ADB start-server"
-			//def error
-			parallel{
-				launchEmulator: {
-					sh "$ANDROID_HOME/tools/qemu/linux-x86_64/qemu-system-x86_64 -engine classic -prop"
+			steps{
+				//sh "$ADB start-server"
+				//def error
+				parallel{
+					launchEmulator: {
+						sh "$ANDROID_HOME/tools/qemu/linux-x86_64/qemu-system-x86_64 -engine classic -prop"
+					},
+					runAndroidTests : {
+						timeout(time: 20, unit : 'SECONDS') {
+						sh "$ADB wait-for-device"
+					}
 				}
-
 			}
 		}
 	}
