--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -31,9 +31,9 @@ pipeline{
 
 		stage('Stage Instrumented Test') {
 			steps{
-				//sh "$ADB start-server"
-				//def error
-				parallel{
+				sh "$ADB start-server"
+				def error
+				parallel(
 					launchEmulator: {
 						sh "$ANDROID_HOME/tools/qemu/linux-x86_64/qemu-system-x86_64 -engine classic -prop"
 					},
@@ -41,7 +41,7 @@ pipeline{
 						timeout(time: 20, unit : 'SECONDS') {
 						sh "$ADB wait-for-device"
 					}
-				}
+				)
 			}
 		}
 	}
