--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -21,9 +21,7 @@ pipeline{
 		stage('Unit test') {
 	  		steps {
 				script{
-					sh './gradlew clean test --no-daemon'
-					junit '**/build/test-results/testDebugUnitTest/*.xml'
-	  				//sh "./gradlew testDebugUnitTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
+					./gradlew installDebug installDebugAndroidTest
 	  			}
 			}
 		}
