--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -23,30 +23,29 @@ pipeline {
         sh "./gradlew assembleDebug assembleAndroidTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
       }
     }
-    stage('Unit test') { 
-      steps {
-      
-      sh "./gradlew testDebugUnitTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
-  //      sh './gradlew connectedAndroidTest -i'
-  //      step([
-  //      $class: 'AndroidEmulator',
-  //      osVersion: 'android-23',
-  //      screenResolution: '1080x1920',
-  //      screenDensity: 'xxhdpi',
-  //      deviceLocale: 'en_US',
-    //    targetAbi: 'x86',
-    //    sdCardSize: '200M',
-   //     showWindow: true,
-  //      commandLineOptions: '-noaudio -gpu mesa -qemu -m 1024 -enable-kvm'
-//])
-      // sh './gradlew test'
-        
-       // Compile and run the unit tests for the app and its dependencies
-     //   sh './gradlew testDebugUnitTest testDebugUnitTest' 
-
-         //Analyse the test results and update the build result as appropriate
-        //junit '*/TEST-.xml'
-      }
-    }
+   stage('Unit Tests') {
+            when {
+                anyOf {
+                    not {
+                        branch 'master'
+                    }
+                    allOf {
+                        branch 'master'
+                        expression {
+                            def tag = sh(returnStdout: true, script: 'git tag --contains $(git rev-parse HEAD)').trim()
+                            return !tag.isEmpty()
+                        }
+                    }
+                }
+            }
+            steps {
+                sh './gradlew ginivision:testDebugUnitTest'
+            }
+            post {
+                always {
+                    publishHTML([allowMissing: false, alwaysLinkToLastBuild: false, keepAll: true, reportDir: 'ginivision/build/reports/tests/testDebugUnitTest', reportFiles: 'index.html', reportName: 'Unit Test Results', reportTitles: ''])
+                }
+            }
+        }
   }
 }
