--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -23,24 +23,39 @@ pipeline {
         sh "./gradlew assembleDebug assembleAndroidTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
       }
     }
-   stage('Unit Tests') {
-            when {
-                anyOf {
-                    not {
-                        branch 'master'
-                    }
-                    allOf {
-                        branch 'master'
-                        expression {
-                            def tag = sh(returnStdout: true, script: 'git tag --contains $(git rev-parse HEAD)').trim()
-                            return !tag.isEmpty()
-                        }
-                    }
-                }
-            }
-            steps {
-                sh './gradlew test'
+  stage("Instrumented tests on min SDK image") {
+        steps {
+            updateGitlabCommitStatus name: "Instrumented tests on min SDK image", state: "running"
+            withAvd(hardwareProfile: "Nexus 5X", systemImage: env.MIN_SDK_IMAGE, headless: true) {
+                sh "./gradlew clean connectedDebugAndroidTest"
             }
         }
+
+        post {
+            failure {
+                updateGitlabCommitStatus name: "Instrumented tests on min SDK image", state: "failed"
+            }
+            success {
+                updateGitlabCommitStatus name: "Instrumented tests on min SDK image", state: "success"
+            }
+        }
+    }
+    stage("Instrumented tests on target SDK image") {
+        steps {
+            updateGitlabCommitStatus name: "Instrumented tests on target SDK image", state: "running"
+            withAvd(hardwareProfile: "Nexus 5X", systemImage: env.TARGET_SDK_IMAGE, headless: true) {
+                sh "./gradlew clean connectedDebugAndroidTest"
+            }
+        }
+
+        post {
+            failure {
+                updateGitlabCommitStatus name: "Instrumented tests on target SDK image", state: "failed"
+            }
+            success {
+                updateGitlabCommitStatus name: "Instrumented tests on target SDK image", state: "success"
+            }
+        }
+    }
   }
 }
