--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -26,7 +26,7 @@ pipeline {
   stage("Instrumented tests on min SDK image") {
         steps {
            // updateGithubCommitStatus name: "Instrumented tests on min SDK image", state: "running"
-            withAvd(hardwareProfile: "Nexus 5X", systemImage: env.MIN_SDK_IMAGE, headless: true) {
+            //withAvd(hardwareProfile: "Nexus 5X", systemImage: env.MIN_SDK_IMAGE, headless: true) {
                 sh "./gradlew clean connectedDebugAndroidTest"
             }
         }
@@ -34,7 +34,7 @@ pipeline {
     stage("Instrumented tests on target SDK image") {
         steps {
            // updateGithubCommitStatus name: "Instrumented tests on target SDK image", state: "running"
-            withAvd(hardwareProfile: "Nexus 5X", systemImage: env.TARGET_SDK_IMAGE, headless: true) {
+          //  withAvd(hardwareProfile: "Nexus 5X", systemImage: env.TARGET_SDK_IMAGE, headless: true) {
                 sh "./gradlew clean connectedDebugAndroidTest"
             }
         }
