--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -23,21 +23,18 @@ pipeline {
         sh "./gradlew assembleDebug assembleAndroidTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
       }
     }
-  stage("Instrumented tests on min SDK image") {
+    
+    stage('StartEmulator'){
         steps {
-           // updateGithubCommitStatus name: "Instrumented tests on min SDK image", state: "running"
-            //withAvd(hardwareProfile: "Nexus 5X", systemImage: env.MIN_SDK_IMAGE, headless: true) {
-                sh "./gradlew clean connectedDebugAndroidTest"
-            //}
+            sh ./emulator -avd Nexus_5X_API_24 -engine auto -wipe-data -no-cache -memory 3072 -no-snapshot-save& sleep 60s
         }
     }
-    stage("Instrumented tests on target SDK image") {
-        steps {
-           // updateGithubCommitStatus name: "Instrumented tests on target SDK image", state: "running"
-          //  withAvd(hardwareProfile: "Nexus 5X", systemImage: env.TARGET_SDK_IMAGE, headless: true) {
-                sh "./gradlew clean connectedDebugAndroidTest"
-           // }
+    
+    stage{
+        steps{
+            sh './gradlew testDebugUnitTest testDebugUnitTest' 
         }
     }
+    
   }
 }
