--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -30,11 +30,10 @@ pipeline {
         }
     }
     
-    stage{
+    stage('Test'){
         steps{
             sh './gradlew testDebugUnitTest testDebugUnitTest' 
         }
-    }
-    
+    } 
   }
 }
