--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -30,10 +30,12 @@ pipeline {
         }
     }
     
-   // stage('Test'){
-   //     steps{
-   //         sh './gradlew testDebugUnitTest testDebugUnitTest' 
-   //     }
-   // } 
+    stage('Test'){
+        steps{
+            sh './gradlew testDebugUnitTest testDebugUnitTest' 
+            sh 'adb emu kill'
+
+        }
+    } 
   }
 }
