--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -26,7 +26,7 @@ pipeline {
     
     stage('StartEmulator'){
         steps {
-            sh 'adb -s localhost:34564'
+            sh 'adb -d localhost:34564'
         }
     }
     
