--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -31,7 +31,7 @@ pipeline {
         }
         stage('UI Testing') {
       steps {
-        script {                                  (****)                          
+        script {                                                   
           if (currentBuild.result == null         
               || currentBuild.result == 'SUCCESS') {  
           // Start your emulator, testing tools
