--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -30,6 +30,12 @@ pipeline {
              
               }
         }
+           stage('Start Emulator') { 
+             steps {
+                    sh '$ANDROID_SDK/tools/emulator -avd Nexus_5X_API_23 -wipe-data'
+             
+              }
+        }
 
      }
 }
