--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -24,18 +24,22 @@ pipeline {
              }
          }
          //{
+         
+         stage('Start Emulator') { 
+             steps {
+                    bat "D:\Tools\Dev\sdk\tools\emulator.exe -avd Nexus_5X_Marshmallow_API_23"
+                    //sh '$ANDROID_SDK/tools/emulator -avd Nexus_5X_API_23 -wipe-data'
+             
+              }
+        }
+         
          stage('Unit test') { 
              steps {
                  sh "./gradlew testDebugUnitTest -PBUILD_NUMBER=${env.BUILD_NUMBER}"
              
               }
         }
-           stage('Start Emulator') { 
-             steps {
-                    sh '$ANDROID_SDK/tools/emulator -avd Nexus_5X_API_23 -wipe-data'
-             
-              }
-        }
+
 
      }
 }
