--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -27,7 +27,7 @@ pipeline {
          
          stage('Start Emulator') { 
              steps {
-                    bat "D:\Tools\Dev\sdk\tools\emulator.exe -avd Nexus_5X_Marshmallow_API_23"
+                    sh 'D:\Tools\Dev\sdk\tools\emulator.exe -avd Nexus_5X_Marshmallow_API_23'
                     //sh '$ANDROID_SDK/tools/emulator -avd Nexus_5X_API_23 -wipe-data'
              
               }
