--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -37,7 +37,7 @@ pipeline {
              steps {
                 //    sh 'D:\Tools\Dev\sdk\tools\emulator.exe -avd Nexus_5X_Marshmallow_API_23'
                     //sh '$ANDROID_SDK/tools/emulator -avd Nexus_5X_API_23 -wipe-data'
-           sh  'adb -s $ANDROID_AVD_DEVICE install -r my-app.apk'
+           sh  'adb -s $ANDROID_AVD_DEVICE install my-app.apk'
 
 
               }
