--- a/app/JenkinsFile
+++ b/app/JenkinsFile
@@ -26,8 +26,8 @@ pipeline {
          //{
                           stage('Start Emulator') { 
              steps {
-                   sh 'D:\Tools\Dev\sdk\tools\emulator.exe -avd Nexus_5X_Marshmallow_API_23'
-                    //sh '$ANDROID_SDK/tools/emulator -avd Nexus_5X_API_23 -wipe-data'
+                   //sh 'D:\Tools\Dev\sdk\tools\emulator.exe -avd Nexus_5X_Marshmallow_API_23'
+                    sh '$ANDROID_SDK/tools/emulator -avd Nexus_5X_API_23 -wipe-data'
 
 
               }
